--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.3",
     "dom-to-image-more": "^3.6.0",
-    "framer-motion": "^12.23.6",
     "html-to-image": "^1.11.13",
     "motion": "^12.26.2",
     "react": "^19.1.0",
